<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:id="@+id/prepare_1_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
		android:background="@drawable/stripe" >
	    
	    <!-- <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_launcher"
	        android:layout_marginRight="10dp" /> -->
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name"
	        android:textSize="32sp"
	        android:textColor="#FFFFFF"/>
	    
    </LinearLayout>
    
    
    <TextView
        android:id="@+id/prepare_1_welcome_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prepare_1_welcome_text"
        android:layout_below="@id/prepare_1_logo"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"/>
    
    <TextView
        android:id="@+id/prepare_1_network"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prepare_1_network"
        android:layout_below="@id/prepare_1_welcome_text"
        android:gravity="center_horizontal"
		android:layout_marginTop="30dp" />
    
    <Button 
        android:id="@+id/prepare_1_reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepare_button_reject"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />
    
    <Button 
        android:id="@+id/prepare_1_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepare_button_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
    
</RelativeLayout>
