<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

	    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/prepare_3_text" />

	    <ProgressBar
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:id="@+id/prepare_3_progressBar"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	    
   	    <TextView
   	        android:layout_marginTop="10dp"
   	        android:id="@+id/prepare_3_finished"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/prepare_3_finished" />
	    
    </LinearLayout>
    
    <Button 
        android:id="@+id/prepare_3_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepare_button_done"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
    
</RelativeLayout>
