<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

	    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/prepare_2_text" />
	    
	    <WebView
	        android:id="@+id/prepare_2_webview"
	        android:layout_width="fill_parent"
	        android:layout_height="180dp"
	        android:layout_marginTop="10dp"/>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal"
	        android:layout_margin="10dp" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/prepare_2_radius"
	            android:layout_marginRight="10dp"/>
	        
       	    <SeekBar
		        android:id="@+id/prepare_2_seekbar"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:max="300" /> <!-- in kilometers -->
       	           
	    </LinearLayout>
	    
<!-- 	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal"
	        android:layout_margin="10dp" >
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Download about: "
	            android:layout_marginRight="10dp"/>
	        
	        <TextView
	            android:id="@+id/megabytes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="500 Mb"/>
      
	    </LinearLayout> -->
	    
    </LinearLayout>
    
    <Button 
        android:id="@+id/prepare_2_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepare_button_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
    
</RelativeLayout>
